# matsuzawa-20260211-2

./: pyproject.toml
.github/actions/run-open-code/: action.yml
.github/prompts/: run_code_generator.md  run_experiment_validator.md
.github/workflows/: run_code_generator.yml  run_experiment_validator.yml
.research/: research_history.json
config/: config.yaml
config/runs/: comparative-0-qwen-gsm8k.yaml  proposed-qwen-gsm8k.yaml
src/: evaluate.py  main.py  model.py  preprocess.py  train.py
